Upgrade to SpringBoot 3 and support GraalVM packaging (#13020)
Upgrade to SpringBoot 3, JDK 17 and support GraalVM